--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "devDependencies": {
     "babel-runtime": "^5.8.29",
     "browserify": "^11.2.0",
-    "gulp": "^3.9.0",
+    "envify": "^3.4.1",
+    "gulp": "^3.9.1",
     "gulp-babel": "^5.3.0",
     "gulp-sourcemaps": "^1.6.0",
     "pre-commit": "^1.1.2",
