--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "events": "^1.1.0",
     "highland": "^2.5.1",
     "lodash": "^3.10.1",
+    "object-hash": "^1.1.4",
     "request-promise": "^1.0.2",
     "socket.io-client": "^1.3.7"
   },
