--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "phineas-sdk",
   "version": "1.0.0",
   "description": "Phineas JS client",
-  "main": "dist/index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "test": "snazzy"
   },
@@ -17,6 +17,7 @@
     "envify": "^3.4.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^5.3.0",
+    "gulp-envify": "^1.0.0",
     "gulp-sourcemaps": "^1.6.0",
     "pre-commit": "^1.1.2",
     "snazzy": "^2.0.1",
