--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "phineas-sdk",
-  "version": "0.0.1-3",
+  "version": "0.0.1",
   "description": "Phineas JS client",
   "main": "./dist/index.js",
   "scripts": {
