--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lodash": "^3.10.1",
     "object-hash": "^1.1.4",
     "request-promise": "^4.1.1",
+    "request": "^2.34",
     "socket.io-client": "^1.3.7"
   },
   "standard": {
